@@ -101,6 +101,14 @@ module SchwerEngine
         return
       end
 
+      rect = paint_rect.dup
+
+      # This line "solves" one stupid problem I can't still get rid of.
+      # It's dirty because it makes the first row of tiles invisible.
+      # I can't find the bug which causes me to use this ####### dirty thing...
+      rect.top += Map::TILE_SIZE
+
+      surface.blit(@background, [0,0], (rect.to_a))      
     end
 
     alias_method :paint, :paint_background
@@ -112,6 +120,14 @@ module SchwerEngine
         return
       end
 
+      rect = paint_rect.dup
+
+      # This line "solves" one stupid problem I can't still get rid of.
+      # It's dirty because it makes the first row of tiles invisible.
+      # I can't find the bug which causes me to use this ####### dirty thing...
+      rect.top += Map::TILE_SIZE
+
+      surface.blit(@foreground, [0,0], (rect.to_a))
     end
 
     # Says if given Rectangle is free of solid tiles.
